dsp-cli/tests/snapshots/cli__control_character_in_server_refused_prose.snap
---
source: dsp-cli/tests/cli.rs
expression: stderr
---
Error: usage error: refusing server value "https://x.example/[31m": it contains a control character
