dsp-cli/tests/snapshots/cli__help_auth_token.snap
---
source: dsp-cli/tests/cli.rs
expression: text
---
Print the resolved bearer token to stdout, for piping.

Prints a bearer credential to stdout — see the cautions in `dsp docs connecting`.

See also: dsp docs connecting

Usage: dsp auth token [OPTIONS]

Options:
  -s, --server <SERVER>
          DSP server URL or shortcut (e.g. `https://api.example.org` or `prod`). Can also be set via the `DSP_SERVER` environment variable or a `.env` file
          
          [env: DSP_SERVER=]

  -v, --verbose...
          Increase log verbosity (-v=info, -vv=debug, -vvv=trace). RUST_LOG overrides

      --allow-insecure-server
          Allow a non-local --server to use insecure http:// (see `dsp docs connecting`)
          
          [env: DSP_ALLOW_INSECURE_SERVER=]

  -h, --help
          Print help (see a summary with '-h')
