dsp-cli/tests/snapshots/cli__help_no_args.snap
---
source: dsp-cli/tests/cli.rs
expression: text
---
AI-agent-friendly CLI for the DaSCH Service Platform.

Usage: dsp [OPTIONS] <COMMAND>

Commands:
  auth  Authentication management
  vre   Virtual Research Environment (VRE) operations
  docs  Embedded end-user documentation; `dsp docs` lists topics
  help  Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...             Increase log verbosity (-v=info, -vv=debug, -vvv=trace). RUST_LOG overrides
      --allow-insecure-server  Allow a non-local --server to use insecure http:// (see `dsp docs connecting`) [env: DSP_ALLOW_INSECURE_SERVER=]
  -h, --help                   Print help (see more with '--help')
  -V, --version                Print version
