dsp-cli/tests/snapshots/cli__help_top.snap
---
source: tests/cli.rs
expression: text
---
AI-agent-friendly CLI for the DaSCH Service Platform (DSP).
Run `dsp docs` to list available documentation topics.

Usage: dsp [OPTIONS] <COMMAND>

Commands:
  auth  Authentication management
  vre   Virtual Research Environment (VRE) operations
  docs  Embedded end-user documentation; `dsp docs` lists topics
  help  Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...
          Increase log verbosity (-v=info, -vv=debug, -vvv=trace). RUST_LOG overrides

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
